[build-system]
requires      = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caload"
version = "0.1.0"
description = "caload - Get the data"
readme = "README.md"
authors = [{ name = 'Tim Hladnik', email = "contact@vxpy.org" }]
license = { file = 'LICENSE' }
classifiers = [
        'Development Status :: 3 - Alpha',
        'Intended Audience :: Science/Research',
        'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
        'Operating System :: POSIX :: Linux',
        'Operating System :: Microsoft :: Windows',
        'Operating System :: Microsoft :: Windows :: Windows 11',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Topic :: Scientific/Engineering'
]
keywords = ['neuroscience', 'experiment', 'data analysis']
dependencies = [
    'SQLAlchemy',
    'h5py',
    'matplotlib',
    'numpy',
    'tifffile',
    'pymysql',
    'pyyaml',
    'scipy',
    'tqdm',
    'setuptools',
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ['.']
include = ['caload*']

[project.optional-dependencies]
dev = ['pip-tools', 'pytest', 'build', 'twine']

[project.urls]
Homepage = 'https://github.com/thladnik/caload'

[project.scripts]
caload = 'caload.__init__:run'